--- a/webapp/templates/home.page.gohtml
+++ b/webapp/templates/home.page.gohtml
@@ -17,6 +17,22 @@
       <div class="row">
         <div class="col">
           <h1 class="mt-3">Home Page</h1>
+          <hr>  
+          <form action="/login" method="post">
+            <div class="form-group">
+              <label for="email">Email address</label>
+              <input type="email" class="form-control" id="email" name="email">
+            </div>
+
+            <div class="form-group">
+              <label for="password">Password</label>
+              <input type="password" class="form-control" name="password" id="password">
+            </div>
+            <br>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+          <hr>
+          <small> Your request came from {{.IP}}</small>
         </div>
       </div>
     </div>
