--- a/webapp/templates/home.page.gohtml
+++ b/webapp/templates/home.page.gohtml
@@ -1,40 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    />
-    <title>Home</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <h1 class="mt-3">Home Page</h1>
-          <hr>  
-          <form action="/login" method="post">
-            <div class="form-group">
-              <label for="email">Email address</label>
-              <input type="email" class="form-control" id="email" name="email">
-            </div>
+{{template "base". }}
 
-            <div class="form-group">
-              <label for="password">Password</label>
-              <input type="password" class="form-control" name="password" id="password">
-            </div>
-            <br>
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
-          <hr>
-          <small> Your request came from {{.IP}}</small>
-        </div>
+{{define "content"}}
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <h1 class="mt-3">Home Page</h1>
+        <hr>  
+        <form action="/login" method="post">
+          <div class="form-group">
+            <label for="email">Email address</label>
+            <input type="email" class="form-control" id="email" name="email">
+          </div>
+
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" name="password" id="password">
+          </div>
+          <br>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+        <hr>
+        <small> Your request came from {{.IP}}</small>
       </div>
     </div>
-  </body>
-</html>
+  </div>
+{{end}}
