--- a/webapp/templates/profile.page.gohtml
+++ b/webapp/templates/profile.page.gohtml
@@ -5,6 +5,14 @@
     <div class="row">
       <div class="col">
         <h1 class="mt-3">User Profile </h1>
+        
+        <!-- decide wether or not to display profile pic -->
+        <form action="user/upload-profile-pic" method="post" enctype="multipart/form-data">
+          <label for="formFile" class="form-label">Chose an image</label>
+          <input class="form-control" type="file" name="image" id="formFile" accept="image/gif,image/jpeg,image/png">
+          <input class="btn btn-primary mt-3" type="submit" value="Upload">
+        </form>
+
         <hr>  
       </div>
     </div>
