chore: uploaded files

--- a/webapp/templates/profile.page.gohtml
+++ b/webapp/templates/profile.page.gohtml
@@ -15,7 +15,7 @@
 
         <hr>
 
-        <form action="user/upload-profile-pic" method="post" enctype="multipart/form-data">
+        <form action="/user/upload-profile-pic" method="post" enctype="multipart/form-data">
           <label for="formFile" class="form-label">Chose an image</label>
           <input class="form-control" type="file" name="image" id="formFile" accept="image/gif,image/jpeg,image/png">
           <input class="btn btn-primary mt-3" type="submit" value="Upload">
